app-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holiday-web-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: holiday-web
  template:
    metadata:
      labels:
        app: holiday-web
    spec:
      containers:
      - name: holiday-web
        image: leetd/holiday-web:v3
        ports:
          - containerPort: 8080
            protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holiday-api-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: holiday-api
  template:
    metadata:
      labels:
        app: holiday-api
    spec:
      containers:
      - name: holiday-api
        image: leetd/holiday-api:v3.1
        resources:
          requests:
            cpu: 10m
        ports:
        - containerPort: 5000
