app-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holiday-web-service
  namespace: dev
spec:
  selector:
    app: holiday-web
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: holiday-api-service
  namespace: dev
spec:
  selector:
    app: holiday-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
