app-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: holiday-ingress
  namespace: dev
spec:
  rules:
  - host: holiday.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: holiday-web-service
            port:
              number: 8081
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: holiday-api-service
            port:
              number: 5000
